--- a/support.html
+++ b/support.html
@@ -1,60 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DailyQuotes Support</title>
   <style>
-    body { font-family: -apple-system, system-ui, sans-serif; line-height:1.6; margin:0; padding:1rem; color:#333; }
-    header { text-align:center; margin-bottom:2rem; }
-    h1 { font-size:1.8rem; }
-    h2 { font-size:1.4rem; margin-top:2rem; }
-    a { color:#007AFF; text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    ul { padding-left:1.2rem; }
-    section { max-width:640px; margin:0 auto; }
-    footer { text-align:center; margin-top:3rem; font-size:0.9rem; color:#666; }
+    body { 
+      font-family: -apple-system, system-ui, sans-serif; 
+      margin: 0; padding: 2rem; 
+      background: #f9f9f9; color: #333; 
+      display: flex; flex-direction: column; align-items: center;
+      text-align: left;
+    }
+    header, footer { text-align: center; }
+    h1 { font-size: 1.8rem; margin-bottom: .5rem; }
+    #funQuote {
+      font-size: 1.1rem; font-style: italic; color: #555;
+      margin: 1rem auto 2rem; max-width: 600px;
+    }
+    nav { margin-bottom: 2rem; }
+    nav a {
+      margin: 0 .5rem;
+      text-decoration: none;
+      color: #007AFF;
+      font-weight: 500;
+    }
+    nav a:hover { text-decoration: underline; }
+    section { max-width: 640px; }
+    section h2 { margin-top: 1.5rem; font-size: 1.4rem; }
+    section p, section li { line-height: 1.6; margin-bottom: .75rem; }
+    ul { padding-left: 1.2rem; }
+    footer { margin-top: 3rem; font-size: .9rem; color: #888; }
   </style>
 </head>
 <body>
-  <section>
-    <header>
-      <h1>DailyQuotes Support</h1>
-      <p>Need help or have feedback? You’re in the right place.</p>
-    </header>
+  <header>
+    <h1>🛠️ Support & FAQ</h1>
+    <div id="funQuote">Loading your daily inspiration…</div>
+    <nav>
+      <a href="index.html">Home 🏠</a>
+      <a href="privacy-policy.html">Privacy Policy 🔒</a>
+    </nav>
+  </header>
 
+  <section>
     <h2>Contact Us</h2>
-    <p>If you hit any issues, or just want to say “hi,” drop us a note at:<br>
-       <a href="mailto:mark.michalak@hotmail.com">support@markmichalak.dev</a>
+    <p>If you need help or want to say “hi,” email:<br>
+      <a href="mailto:mark.michalak@hotmail.com">mark.michalak@hotmail.com</a>
     </p>
 
     <h2>Frequently Asked Questions</h2>
     <ul>
       <li>
         <strong>Why is my quote not refreshing daily?</strong><br>
-        DailyQuotes fetches a new quote once every 24 hours. If you reinstall the app or clear data, it will reset the cycle.
-      </li>
-      <li>
-        <strong>Can I browse older or themed quotes?</strong><br>
-        Swipe left/right to browse previous or next days. Category filters (Stoic, Motivational, etc.) are coming soon!
+        The app fetches a new quote once every 24 hours. Clearing app data or reinstall will reset the cycle.
       </li>
       <li>
         <strong>How do I save my favorites?</strong><br>
-        Tap the <code>❤️</code> icon under any quote to add it to your Favorites tab. You can remove or share them from there.
+        Tap the ❤️ icon to add a quote to your Favorites. Manage them anytime from the Favorites tab.
+      </li>
+      <li>
+        <strong>Can I browse older or themed quotes?</strong><br>
+        Swipe left/right to see yesterday’s quotes. Themed categories are coming soon!
       </li>
       <li>
         <strong>Is there an offline mode?</strong><br>
-        Yes—your daily quote and all your Favorites are stored locally, so you can view them even without Internet.
+        Yes—your daily quote and favorites are cached locally so you can read them without Internet.
       </li>
     </ul>
-
-    <h2>App Version & Updates</h2>
-    <p>You’re running version <strong>1.0</strong>. We’re hard at work on new themes, performance tweaks, and more—stay tuned!</p>
-
-    <footer>
-      <p><a href="https://apps.apple.com/app/id6747954626">View DailyQuotes on the App Store</a></p>
-      <p>&copy; 2025 Mark Michalak</p>
-    </footer>
   </section>
+
+  <footer>
+    <p>Made with ❤️ by Mark Michalak</p>
+    <p><a href="index.html">Back to Home</a></p>
+  </footer>
+
+  <script>
+    const quotes = [
+      "“Life is what happens when you're busy making other plans.” — John Lennon",
+      "“The only way to do great work is to love what you do.” — Steve Jobs",
+      "“Believe you can and you're halfway there.” — Theodore Roosevelt",
+      "“Don't watch the clock; do what it does. Keep going.” — Sam Levenson",
+      "“Everything you've ever wanted is on the other side of fear.” — George Addair"
+    ];
+    document.getElementById('funQuote').textContent =
+      quotes[Math.floor(Math.random() * quotes.length)];
+  </script>
 </body>
 </html>
